--- a/public/style.css
+++ b/public/style.css
@@ -84,7 +84,7 @@ hr {
 	top: 242px;
 	border-top: solid 1px #000;
 }
-.tabs {
+#tab_container a {
 	font-size: 16px;
 	font-weight: normal;
 	letter-spacing: 1.25px;
@@ -106,20 +106,25 @@ hr {
 	font-size: 14px;
 	line-height: normal;
 	position: relative;
-	top: -55px;
+	top: -57px;
 	float: right;
 	cursor: hand;
 	cursor: pointer;
 }
+#icon_container {
+	margin-left: auto;
+	margin-right: auto;
+	width: 560px;
+}
 .media_icons {
-	float: left;
-	padding: 15px 15px 30px 15px;
+	padding: 15px 25px 30px 25px;
 }
 #copyright {
 	text-align: right;
 }
 #smartlogic {
-	vertical-align: bottom;
+	vertical-align: middle;
+	margin-top: -8px;
 }
 
 
