mobile browser detection and toggle. google analytics

--- a/public/style.css
+++ b/public/style.css
@@ -127,6 +127,9 @@ hr {
 #copyright a {
         vertical-align: middle;
 }
+#mobile-toggle {
+  text-align: center;
+}
 #smartlogic {
 	vertical-align: middle;
 	margin-top: -8px;
