--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,9 @@ a {
   color: #f00;
   text-decoration: none;
 }
+a:hover {
+  text-decoration: underline;
+}
 h1 {
   width: 960px;
   height: 275px;
