--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,9 @@ p {
   padding: 30px;
   color: #000;
 }
+p.trailing {
+  padding: 0 30px 30px 30px;
+}
 @font-face {
   font-family: fontin;
   src: url("/fontin_b.otf");
