Added google form to the about BohConf section.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,7 @@ h2 {
   border-top: double 6px #fff;
   border-bottom: double 6px #fff;
   margin: 12px 0px;
+  clear: both;
   border-image: url(/images/h2_border.png) 8 0 8 0 stretch stretch;
   -webkit-border-image: url(/images/h2_border.png) 8 0 8 0 stretch stretch;
   -moz-border-image: url(/images/h2_border.png) 8 0 8 0 stretch stretch;
@@ -52,6 +53,7 @@ h2 {
 h3 {
   font-size: 16px;
   padding: 5px 30px;
+  line-height: 22px;
 }
 table {
   width: 98%;
@@ -69,6 +71,9 @@ td {
 hr {
   clear: both;
   border: solid 1px #000;
+}
+input {
+	margin: 8px auto;
 }
 #main_container {
   margin: 0px auto;
@@ -108,11 +113,60 @@ hr {
   padding: 15px 30px;
   font-size: 14px;
   line-height: normal;
-  position: relative;
-  top: -57px;
   float: right;
   cursor: hand;
   cursor: pointer;
+  margin: -57px 0 0 0 ;
+}
+#about_container {
+	clear: both;
+}
+#about_container #form-container, #about_container #form-message {
+	width: 324px;
+	background-color: #BDD472;
+	border: double 8px #fff;
+	padding: 15px;
+	float: right;
+	text-align: center;
+	margin: 30px;
+}
+#about_container #form-container h3 {
+	padding: 10px 0px;
+}
+#about_container #form-container p {
+	width: 264px;
+	text-align: center;
+}
+#about_container #about_text_container {
+	width: 500px;
+	float: left;
+}
+#about_container #about_text_container p {
+	padding: 30px 0 30px 30px;
+}
+.text_field {
+	width: 300px;
+	height: 24px;
+	padding-left: 10px;
+	font-size: 16px;
+	color: #999;
+}
+#submit_button {
+	color: #f00;
+	background-color: #fff;
+	border: double 8px #BDD472;
+	font-size: 20px;
+	padding: 4px 40px;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	cursor: hand;
+	cursor: pointer;
+}
+#submit_button:hover {
+	color: #BDD472;
+}
+#form-message {
+	color: #63C;
 }
 #icon_container {
   margin-left: auto;
@@ -162,3 +216,7 @@ hr {
   -webkit-border-radius: 16px;
 }
 
+.clear {
+  clear:both;
+  height: 1px;
+}
