--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ h1 {
   background-image: url("../images/boh_header_2011.png");
   background-repeat: no-repeat;
   text-indent: -9999px;
-  margin-bottom: 100px;
+  margin-bottom: 70px;
 }
 h2 {
   color: #fff;
@@ -42,14 +42,14 @@ h2 {
   font-weight: bold;
   letter-spacing: 1.5px;
   background-color: #000;
-  padding: 10px 0px 10px 30px;
-  width: 930px;
+  padding: 10px 30px;
+  width: 900px;
   margin: 24px 0 0 0;
   clear: both;
 }
 h3 {
   font-size: 16px;
-  padding: 5px 30px;
+  padding-bottom: 10px;
   line-height: 22px;
 }
 table {
@@ -72,12 +72,8 @@ hr {
 input {
   margin: 8px auto;
 }
+
 #main_container {
-  margin: 0px auto;
-  background-position: center;
-  background-repeat: repeat-y;
-}
-#content {
   width: 960px;
   margin: 0px auto;
 }
@@ -101,19 +97,22 @@ input {
 }
 .back_to_top {
   color: #ffd700;
-  padding: 15px 30px;
   font-size: 14px;
   line-height: normal;
   float: right;
   cursor: hand;
   cursor: pointer;
-  margin: -40px 0 0 0 ;
+  margin: -30px 30px 0 0;
+}
+.back_to_top:hover {
+	color: #ff4923;
 }
 
 .section {
 	background-color: #ffc8aa;
 	-webkit-box-shadow: 0 5px 10px #000;
-	padding: 30px;
+	-moz-box-shadow: 0 5px 10px #000;
+	padding: 20px 30px;
 }
 
 .section p:last-child {
@@ -125,22 +124,26 @@ input {
 }
 #form-container, #form-message {
   width: 324px;
-  background-color: #FF5A41;
-  border: double 8px #fff;
+  background-color: #3f0000;
+  border: double 4px #ff4923;
   padding: 15px;
   text-align: center;
   margin-right: 30px;
   float: left;
+  -webkit-box-shadow: inset 0 0 25px #000000;
 }
 #form-container h3 {
+	color: #fff;
   padding: 10px 0px;
 }
 #form-container p {
-  width: 264px;
-  text-align: center;
+	color: #fff;
+	margin-top: 6px;
+	padding: 0;
 }
 #about_container #about_text_container {
-  width: 500px;
+  width: 570px;
+  margin-right: 30px;
   float: left;
 }
 
@@ -150,31 +153,69 @@ input {
   padding-left: 10px;
   margin: 6px 0;
   font-size: 16px;
-  color: #999;
+  color: #000;
+  background-color: #ffd700;
+  border: 0;
+  border-bottom: solid 4px #ff4923;	
 }
 
 #form-container textarea {
 	width: 311px;
 	height: 60px;
 	margin: 6px 0;
+	background-color: #ffd700;
+	border: 0;
+	border-bottom: solid 4px #ff4923;
+}
+
+#form-container .text_field:focus, #form-container textarea:focus {
+	background-color: #fff;
 }
 
 #submit_button {
-  color: #FF5A41;
-  background-color: #fff;
+  color: #fff;
+  text-shadow: -1px -1px 0 #7f0000;
+  background-color: #000;
   font-size: 20px;
   padding: 4px 40px;
+  border: 0;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   cursor: hand;
   cursor: pointer;
+  background: -webkit-gradient(linear, 0% 10%, 0% 100%, from(#ff4923), to(#7f0000));
+	background: -moz-linear-gradient(top,  #faa51a,  #f47a20);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#faa51a', endColorstr='#f47a20');
+	border-top: solid 1px #ff9999;
+	border-bottom: solid 1px #0f0000;
+	-webkit-box-shadow: inset 0 0 5px #000000;
 }
 #submit_button:hover {
-  color: #999;
+	background: -webkit-gradient(linear, 0% 10%, 0% 100%, from(#f00), to(#7f0000));
 }
+#submit_button:active {
+	color: #f99;
+	text-shadow: -1px -1px 0 #0f0000;
+	background: -webkit-gradient(linear, 0% 10%, 0% 100%, from(#7f0000), to(#a00));
+	border-top: solid 1px #0f0000;
+}
+
 #form-message {
   color: #63C;
 }
+
+.sessions h3 {
+	border-top: dashed 1px #000;
+	padding: 10px 0 0 0;
+}
+.sessions h3:first-child {
+	border: 0;
+	padding: 0;
+}
+.sessions p {
+	padding: 10px 0;
+}
+
 #icon_container {
   text-align: center;
 }
@@ -182,9 +223,11 @@ input {
   padding: 15px 25px 30px 25px;
 }
 #copyright {
+	color: #fff;
   text-align: right;
   vertical-align: middle;
   height: 25px;
+  margin-top: 20px;
 }
 #copyright a {
         vertical-align: middle;
@@ -197,12 +240,17 @@ input {
   margin-top: -8px;
 }
 
+#bohconf_2010_gallery {
+	width: 290px;
+	float: right;
+}
+
 .gallery {
   text-align: center;
 }
 .gallery li {
-  padding: 0 8px;
-  display: inline;
+  padding: 8px;
+  display: inline-block;
 }
 
 .gallery img {
