--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,7 @@ input {
   width: 960px;
   background-color: #000;
   -webkit-box-shadow: 0 3px 10px #000;
+  -moz-box-shadow: 0 3px 10px #000;
 }
 #tab_container a {
   font-size: 16px;
@@ -131,6 +132,9 @@ input {
   margin-right: 30px;
   float: left;
   -webkit-box-shadow: inset 0 0 25px #000000;
+  -moz-box-shadow: inset 0 0 25px #000000;
+  position: relative;
+  z-index: 100;
 }
 #form-container h3 {
 	color: #fff;
@@ -184,19 +188,22 @@ input {
   cursor: hand;
   cursor: pointer;
   background: -webkit-gradient(linear, 0% 10%, 0% 100%, from(#ff4923), to(#7f0000));
-	background: -moz-linear-gradient(top,  #faa51a,  #f47a20);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#faa51a', endColorstr='#f47a20');
+	background: -moz-linear-gradient(top,  #ff4923,  #7f0000);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4923', endColorstr='#7f0000');
 	border-top: solid 1px #ff9999;
 	border-bottom: solid 1px #0f0000;
 	-webkit-box-shadow: inset 0 0 5px #000000;
+	-moz-box-shadow: inset 0 0 5px #000000;
 }
 #submit_button:hover {
 	background: -webkit-gradient(linear, 0% 10%, 0% 100%, from(#f00), to(#7f0000));
+	background: -moz-linear-gradient(top,  #f00,  #7f0000);
 }
 #submit_button:active {
 	color: #f99;
 	text-shadow: -1px -1px 0 #0f0000;
 	background: -webkit-gradient(linear, 0% 10%, 0% 100%, from(#7f0000), to(#a00));
+	background: -moz-linear-gradient(top,  #7f0000,  #a00);
 	border-top: solid 1px #0f0000;
 }
 
@@ -229,7 +236,7 @@ input {
   text-align: center;
 }
 .media_icons {
-  padding: 15px 25px 30px 25px;
+  padding: 15px 19px 30px 19px;
 }
 #copyright {
 	color: #fff;
