began styling to match mew 2013 logo

--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,139 @@
-@font-face {
-    font-family: 'damion';
-    src: url('/fonts/damion-regular-webfont.eot');
-    src: url('/fonts/damion-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/damion-regular-webfont.woff') format('woff'),
-         url('/fonts/damion-regular-webfont.ttf') format('truetype'),
-         url('/fonts/damion-regular-webfont.svg#damionregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 body {
+  background-color: #141eb4;
+  background-image: url("/img/background.png");
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
   margin: 40px 0 0;
-  background: #bcd371;
 }
 
-footer {
-  margin-top: 120px;
-  font-size: 75%;
+a {
+  color: #44a8ef;
+  font-weight: 700;
+  text-decoration: underline;
 }
 
 article {
-  padding: 40px 20px 0;
+  margin: 0 30px;
+  padding: 20px 0;
   line-height: 150%;
+  border-top: dashed 1px #fff;
+  border-bottom: dashed 1px #c5c5c5;
+}
+
+article:first-of-type {
+  border-top: none;
+}
+
+article:last-of-type {
+  border-bottom: none;
+}
+
+article h2 {
+  font-size: 26px;
+  font-weight: 700;
+  text-shadow: 0 1px 0 #fff;
+  margin: 0 0 10px 0;
+}
+
+article p {
+  color: #222;
+  font-size: 15px;
+}
+
+article p:last-child {
+  margin-bottom: 0;
 }
 
 .content {
   background: #f8f8f8;
-  border-radius: 6px;
+  margin: 0 0 50px 0;
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, .6);
+  -mox-box-shadow: 0 2px 2px rgba(0, 0, 0, .6);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .6);
+}
+
+.navbar .navbar-inner {
+  background-color: #fff;
+  background-image: none;
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, .4);
 }
 
 .navbar .brand, h1, h2, h3 {
-  font-family: "damion", "Helvetica Neue",Helvetica,Arial,sans-serif;
-  color: #ff0000;
+  color: #f00;
+  font-weight: 700;
+}
+
+.navbar .brand {
+  text-decoration: none;
+}
+
+.navbar .nav li a {
+  color: #222;
+}
+
+.navbar .nav li:hover a {
+  color: #f00;
+}
+
+.navbar .nav li.active a {
+  color: #f00;
+}
+
+.navbar .nav li.active:hover a {
+  color: #f00;
+}
+
+span.logo {
+  display: block;
+  text-align: right;
+  margin: 20px 0;
+}
+
+span.logo h1 {
+  float: left;
+  clear: both;
+  display: block;
+  width: 400px;
+  height: 77px;
+  background-image: url("/img/bohconf-2013.png");
+  background-repeat: no-repeat;
+  text-align: left;
+  text-indent: -9999px;
+  margin: 100px 0 0 0;
+}
+
+span.logo p {
+  float: left;
+  clear: both;
+  color: #64c8ff;
+  font-size: 32px;
+  text-shadow: 0 2px 2px rgba(0, 0, 0, .6);
+  margin: 26px 0 0 0;
+}
+
+footer {
+  background-color: #eaeaea;
+  font-size: 12px;
+  padding: 10px 30px;
+}
+
+@media (max-width: 767px) {
+  span.logo {
+    text-align: center;
+  }
+
+  span.logo h1 {
+    float: none;
+    width: 100%;
+    background-position: center;
+  }
+
+  span.logo p {
+    float: none;
+  }
+
+  span.logo img {
+    margin-top: 20px;
+  }
 }
 
 @media (max-width: 979px) {
@@ -39,6 +141,13 @@ article {
     margin-top: 0;
   }
 }
+
+@media (max-width: 1199px) {
+  span.logo h1 {
+    margin: 0;
+  }
+}
+
 @media (min-width: 1200px) {
   article {
     font-size: 16px;
