--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
-  background-color: #141eb4;
+  background-color: #000032;
   background-image: url("/img/background.png");
+  background-position: center;
+  background-repeat: repeat-y;
   font-family: "Raleway", Helvetica, Arial, sans-serif;
   margin: 40px 0 0;
 }
@@ -55,6 +57,8 @@ article p:last-child {
   background-color: #fff;
   background-image: none;
   -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, .4);
+  -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, .4);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .4);
 }
 
 .navbar .brand, h1, h2, h3 {
@@ -64,6 +68,11 @@ article p:last-child {
 
 .navbar .brand {
   text-decoration: none;
+}
+
+.navbar .nav {
+  display: block;
+  float: none;
 }
 
 .navbar .nav li a {
@@ -82,32 +91,95 @@ article p:last-child {
   color: #f00;
 }
 
-span.logo {
+.navbar .nav li.register {
+  float: right;
+}
+
+.navbar .nav li.register a {
+  color: #fff;
+  background-color: #64c8ff;
+  text-shadow: none;
+}
+
+.navbar .nav li.register a:hover {
+  background-color: #78d2ff;
+}
+
+.navbar .nav li.register a:active {
+  background-color: #50b9ff;
+  -webkit-box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .15) inset;
+}
+
+div.header {
   display: block;
-  text-align: right;
+  font-size: 0;
   margin: 20px 0;
 }
 
-span.logo h1 {
-  float: left;
-  clear: both;
-  display: block;
-  width: 400px;
-  height: 77px;
-  background-image: url("/img/bohconf-2013.png");
-  background-repeat: no-repeat;
-  text-align: left;
-  text-indent: -9999px;
-  margin: 100px 0 0 0;
+div.header span {
+  display: inline-block;
+  width: 50%;
+  vertical-align: top;
 }
 
-span.logo p {
-  float: left;
+div.header span.logo {
+  text-align: right;
+}
+
+div.header h1 {
   clear: both;
-  color: #64c8ff;
-  font-size: 32px;
+  display: block;
+  width: 100%;
+  height: 75px;
+  background-image: url("/img/bohconf-2013.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  text-align: left;
+  text-indent: -9999px;
+  margin: 60px 0 0 0;
+}
+
+div.header p {
+  clear: both;
+  color: #fff;
+  font-size: 28px;
   text-shadow: 0 2px 2px rgba(0, 0, 0, .6);
-  margin: 26px 0 0 0;
+  line-height: 130%;
+  margin: 0;
+  padding: 0 20px 0 0;
+}
+
+div.header p.ignite {
+  color: #64c8ff;
+  font-size: 22px;
+  margin: 30px 0 0 0;
+}
+
+div.header a {
+  display: inline-block;
+  color: #fff;
+  background-color: #64c8ff;
+  font-size: 26px;
+  font-weight: 400;
+  text-decoration: none;
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, .6), 0 1px 0 rgba(255, 255, 255, .5) inset;
+  -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, .6), 0 1px 0 rgba(255, 255, 255, .5) inset;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .6), 0 1px 0 rgba(255, 255, 255, .5) inset;
+  margin: 40px 0 0 0;
+  padding: 16px 48px;
+}
+
+div.header a:hover {
+  background-color: #78d2ff;
+}
+
+div.header a:active {
+  background-color: #50b9ff;
+  -webkit-box-shadow: 0 -1px 0 rgba(0, 0, 0, .7), 0 2px 4px rgba(0, 0, 0, .2) inset;
+}
+
+div.header img {
+  display: inline-block;
 }
 
 footer {
@@ -117,21 +189,21 @@ footer {
 }
 
 @media (max-width: 767px) {
-  span.logo {
+  div.header {
     text-align: center;
   }
 
-  span.logo h1 {
+  div.header h1 {
     float: none;
     width: 100%;
     background-position: center;
   }
 
-  span.logo p {
+  div.header p {
     float: none;
   }
 
-  span.logo img {
+  div.header img {
     margin-top: 20px;
   }
 }
@@ -140,10 +212,18 @@ footer {
   body {
     margin-top: 0;
   }
+
+  .navbar .nav li.register {
+    float: left;
+  }
+
+  .navbar .nav li.register {
+    width: 100%;
+  }
 }
 
 @media (max-width: 1199px) {
-  span.logo h1 {
+  div.header h1 {
     margin: 0;
   }
 }
