--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,16 @@ div.map span:after {
   box-shadow: 0 0 0 12px #fff inset, 0 0 4px 13px rgba(0, 0, 0, .2) inset;
 }
 
+th, td {
+  padding: 3px 9px;
+  border: solid 1px #CCC;
+  text-align: center;
+}
+
+table {
+  margin-bottom: 10px;
+}
+
 footer {
   background-color: #eaeaea;
   font-size: 12px;
