--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,24 @@ table {
   margin-bottom: 10px;
 }
 
+#hosts div.hosts-logos {
+  font-size: 0;
+  margin: 0 0 30px 0;
+  padding: 0 20px;
+}
+
+#hosts img.smartlogic {
+  display: inline-block;
+  width: 60%;
+  margin: 0 10% 0 0;
+  padding: 30px 0 0 0;
+}
+
+#hosts img.ub {
+  display: inline-block;
+  width: 30%;
+}
+
 footer {
   background-color: #eaeaea;
   font-size: 12px;
