--- a/css/style.css
+++ b/css/style.css
@@ -224,24 +224,34 @@ table {
 }
 
 #hosts div {
-  display: inline-block;
-  width: 50%;
+  display: block;
+}
+
+#hosts div.logos a,
+#hosts div.descriptions p {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  display: inline-block;
+  width: 50%;
+}
+
+#hosts div.descriptions p {
   vertical-align: top;
 }
 
-#hosts div:first-of-type {
+#hosts div.logos a:first-of-type,
+#hosts div.descriptions p:first-of-type {
   padding-right: 20px;
 }
 
-#hosts div:last-of-type {
+#hosts div.logos a:last-of-type,
+#hosts div.descriptions p:last-of-type {
   padding-left: 20px;
 }
 
 #hosts div img {
-  margin: 0 0 20px 0;
+  margin: 0 0 30px 0;
 }
 
 #hosts div p {
