--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,19 @@ table {
   line-height: 150%;
 }
 
+#sponsors {
+  font-size: 0;
+}
+
+#sponsors img {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  display: inline-block;
+  width: 50%;
+  margin: 0;
+  padding: 0 20px 40px 20px;
+}
+
 footer {
   background-color: #eaeaea;
   font-size: 12px;
