--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,7 @@ footer {
   background-color: #eaeaea;
   font-size: 12px;
   padding: 10px 30px;
+  text-align: center;
 }
 
 @media (max-width: 767px) {
