Add our early batch of speaker announcements. More to come this week! @ryan feel free to fix up the style if you like

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,19 @@ article p:last-child {
   margin-bottom: 0;
 }
 
+article#schedule h3 {
+  font-weight: 400;
+}
+
+article#schedule section {
+  height: 110px;
+}
+
+article#schedule section img {
+  height: 100px;
+  border-radius: 50%;
+}
+
 .content {
   background: #f8f8f8;
   margin: 0 0 50px 0;
