There Will Be No Ignite. Remove mentions of "Ignite" in favor of "Opening Party"

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ div.header p {
   padding: 0 20px 0 0;
 }
 
-div.header p.ignite {
+div.header p.pre-party {
   color: #64c8ff;
   font-size: 22px;
   margin: 30px 0 0 0;
