hack for iOS safari so the table can be read over the bg image

--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,10 @@ footer {
 }
 
 @media (max-width: 767px) {
+  table {
+    background-color: #fff;
+  }
+
   div.header {
     text-align: center;
   }
